Move dependencies to cpanfile

--- a/dist.ini
+++ b/dist.ini
@@ -27,10 +27,7 @@ copyright_holder = Bartosz Jarzyna
 [Prereqs / TestRequires]
 Test::Exception = 0
 
+[Prereqs::FromCPANfile]
 [Prereqs]
 perl = 5.010
-Moo = 2.000000
-Type::Tiny = 1.004000
-Import::Into = 0
-Sub::Util = 0
 
