--- a/.perltidyrc
+++ b/.perltidyrc
@@ -22,5 +22,5 @@
 --brace-tightness=2
 --opening-token-right
 
--gal='first any sum sum0 reduce dies_ok'
+-gal='first any sum sum0 reduce dies_ok throws_ok lives_ok'
 
