Remove myself from the meta contributors

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,8 @@ copyright_holder = Bartosz Jarzyna
 
 [Git::Tag]
 [Git::Contributors]
+remove=bbrtj
+remove=brtastic
 [GitHub::Meta]
 
 [TestRelease]
