--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,9 @@ copyright_holder = Bartosz Jarzyna
 [MetaYAML]
 [MetaJSON]
 
+[PruneFiles]
+filename=benchmark
+
 [PruneCruft]
 [Manifest]
 [License]
