Tidy up, add CI action for checking code tidiness

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,11 @@ jobs:
         perl -v
         cpanm -v
 
+    - name: Check if the code is tidy
+      if:  ${{ startsWith(matrix.runner, 'ubuntu-') && startsWith(matrix.perl, '5.36') }}
+      run: |
+        cpanm --notest Perl::Tidy Code::TidyAll
+        tidyall -a --check-only
     - name: Install Test::More
       if:  ${{ startsWith( matrix.perl, '5.10') }}
       run: |
